--- a/word-count/hadoop-java/pom.xml
+++ b/word-count/hadoop-java/pom.xml
@@ -24,7 +24,8 @@
       <dependency>
           <groupId>org.apache.mrunit</groupId>
           <artifactId>mrunit</artifactId>
-          <version>0.5.0-incubating</version>
+          <version>0.9.0-incubating</version>
+          <classifier>hadoop1</classifier>
       </dependency>
   </dependencies>
 
@@ -35,8 +36,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.0</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>1.6</source>
+          <target>1.6</target>
         </configuration>
       </plugin>
 
@@ -69,6 +70,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
+        <version>2.4</version>
         <configuration>
           <archive>
             <manifest>
